--- a/文档翻译/API/1概述/概述.md
+++ b/文档翻译/API/1概述/概述.md
@@ -15,7 +15,7 @@ vscode在构建的时候考虑到了可扩展性。从UI到编辑体验，几乎
 这里有一些你可以实现的扩展API的例子：
 - 使用颜色或文件图标主题改变vscode的外观 - 主题[(Theming)](https://code.visualstudio.com/api/extension-capabilities/theming)
 - 在UI中添加自定义的组件和视图 - 扩展工作台[(Extending the Workbench)](https://code.visualstudio.com/api/extension-capabilities/extending-workbench)
-- 创建一个web视图来显示一个用HTML/CSS/JS构建的自定义网页 - web视图指南[(Webview Guide)](https://code.visualstudio.com/api/extension-guides/webview)
+- 创建一个webview来显示一个用HTML/CSS/JS构建的自定义网页 - webview指南[(Webview Guide)](https://code.visualstudio.com/api/extension-guides/webview)
 - 支持一种新的编程语言 - 语言扩展概述[(Language Extensions Overview)](https://code.visualstudio.com/api/language-extensions/overview)
 - 支持调试一个特定的运行时（程序） -  调试扩展指南[(Debugger Extension Guide)](https://code.visualstudio.com/api/extension-guides/debugger-extension)
 
