--- a/文档翻译/API/2开始/你的第一个扩展.md
+++ b/文档翻译/API/2开始/你的第一个扩展.md
@@ -43,3 +43,16 @@ code ./helloworld
 - 在命令面板中给`Hello World`命令换个新名字
 - [Contribute](https://code.visualstudio.com/api/references/contribution-points)另一个命令，可以在提示消息中显示当前时间。Contribution points是你在`package.json`扩展清单中编写的静态声明，用于扩展VS Code,例如向你的扩展插件中添加命令、菜单或案件绑定。
 - 调用另一个VS CodeAPI替换`vscode.window.showInformationMessage`来显示警告信息。
+
+## 调试扩展
+VS Code的内置调试功能使其可以很容易调试扩展。通过点击一行前的空白处可以设置断点，VS Code将会触发此处断点。你可以将鼠标悬浮在编辑器的变量上，或者通过左侧运行视图来检查变量的值。调试控制台允许你求表达式的值。
+
+你可以在[Node.js调试专题](https://code.visualstudio.com/docs/nodejs/nodejs-debugging)中学习更多关于在VS Code中调试Node.js应用的信息。
+
+## 下一步
+在下一个专题——[扩展剖析](https://code.visualstudio.com/api/get-started/extension-anatomy)中，我们将更进一步的研究`Hello World`示例的源代码并解释关键概念
+
+你可以在 https://github.com/microsoft/vscode-extension-samples/tree/master/helloworld-sample 中找到本教程的源代码。扩展指南专题包含了其他示例，每个示例演示了不同的VS Code API或贡献点。
+
+### 使用JavaScript
+在本指南中，我们主要描述了如何使用TypeScript开发VS Code扩展，因为我们相信TypeScript为开发VS Code扩展提供了最好的体验。但是如果你喜欢JavaScript，你仍然可以继续使用[helloworld-minimal-sample](http://webtrans.yodao.com/server/webtrans/tranUrl?url=https%3A%2F%2Fgithub.com%2Fmicrosoft%2Fvscode-extension-samples%2Ftree%2Fmaster%2Fhelloworld-minimal-sample&from=en&to=zh-CHS&type=2&product=mdictweb&salt=1604999089443&sign=dff34a8196d545974d50f8d629cdb056)。
