--- a/文档翻译/API/2开始/你的第一个扩展.md
+++ b/文档翻译/API/2开始/你的第一个扩展.md
@@ -21,11 +21,9 @@ code ./helloworld
 ```
 然后，在编辑器中按<kbd>F5</kbd>。将会在新的编译器窗口中编译运行此扩展。
 在新窗口的命令面板（<kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>P</kbd>）中执行`Hello World`命令:
-<video width="640" height="480" controls autoplay>
-  <source src="https://code.visualstudio.com/api/get-started/your-first-extension/launch.mp4" type="video/mp4">
-</video>
+![HelloWorld](./img/helloworld.gif)
 
-你可以看到`Hello World from HelloWorld!`的通知出现了，成功！
+你可以看到右下角`Hello World from HelloWorld!`的通知出现了，成功！
 
 ## 开发扩展
 让我们改变一下提示信息：
@@ -35,17 +33,19 @@ code ./helloworld
 - 再次运行`Hello World`命令
 
 你应该能看到出现了更新过的消息。
-<video width="640" height="480" controls autoplay>
-  <source src="https://code.visualstudio.com/api/get-started/your-first-extension/reload.mp4" type="video/mp4">
-</video>
+![HelloVSCode](./img/hellovscode.gif)
 
 这里有一些建议供你尝试：
 - 在命令面板中给`Hello World`命令换个新名字
 - [Contribute](https://code.visualstudio.com/api/references/contribution-points)另一个命令，可以在提示消息中显示当前时间。Contribution points是你在`package.json`扩展清单中编写的静态声明，用于扩展VS Code,例如向你的扩展插件中添加命令、菜单或案件绑定。
 - 调用另一个VS CodeAPI替换`vscode.window.showInformationMessage`来显示警告信息。
 
+![ShowTime](./img/showtime.gif)
+
 ## 调试扩展
 VS Code的内置调试功能使其可以很容易调试扩展。通过点击一行前的空白处可以设置断点，VS Code将会触发此处断点。你可以将鼠标悬浮在编辑器的变量上，或者通过左侧运行视图来检查变量的值。调试控制台允许你求表达式的值。
+
+![debug](./img/debug.gif)
 
 你可以在[Node.js调试专题](https://code.visualstudio.com/docs/nodejs/nodejs-debugging)中学习更多关于在VS Code中调试Node.js应用的信息。
 
