--- a/文档翻译/API/1概述/概述.md
+++ b/文档翻译/API/1概述/概述.md
@@ -1,7 +1,9 @@
 # 扩展API
+
 vscode在构建的时候考虑到了可扩展性。从UI到编辑体验，几乎所有的部分都可通过扩展API来定制和增强。事实上，vscode的很多核心特点都是通过[扩展](https://github.com/microsoft/vscode/tree/master/extensions)构造出来的，并且都使用了相同的扩展API。
 
 文档描述：
+
 - 如何构建、运行、调试、测试和发布一个插件
 - 如何使用vscode丰富的插件
 - 在哪里找帮助你入门的[指南](https://code.visualstudio.com/api/extension-guides/overview)和[代码示例](https://github.com/microsoft/vscode-extension-samples)。
@@ -13,6 +15,7 @@ vscode在构建的时候考虑到了可扩展性。从UI到编辑体验，几乎
 ## 插件可以做什么？
 
 这里有一些你可以实现的扩展API的例子：
+
 - 使用颜色或文件图标主题改变vscode的外观 - 主题[(Theming)](https://code.visualstudio.com/api/extension-capabilities/theming)
 - 在UI中添加自定义的组件和视图 - 扩展工作台[(Extending the Workbench)](https://code.visualstudio.com/api/extension-capabilities/extending-workbench)
 - 创建一个webview来显示一个用HTML/CSS/JS构建的自定义网页 - webview指南[(Webview Guide)](https://code.visualstudio.com/api/extension-guides/webview)
@@ -22,3 +25,38 @@ vscode在构建的时候考虑到了可扩展性。从UI到编辑体验，几乎
 如果你想了解扩展API更多全面的概述，请参考扩展功能概述[(Extension Capabilities Overview)]()
 
 
+## 如何构建插件
+
+构建一个好的插件需要投入很多精力 。以下API文档的每个部分都可以帮助你：
+
+- 开始部分：通过Hello World示例教授构建扩展的基本概念。
+- 扩展功能部分：将VS Code的庞大API分解成更小的类别，并指向更详细的主题。
+- 扩展指南部分：包括解释VS code扩展API的具体用法的指南和代码示例。
+- 语言扩展部分：通过指南和代码示例说明如何添加对编程语言的支持。
+- 测试和发布部分：包括各种扩展开发主题的深入指南，例如测试和发布扩展。
+- 高级主题部分：解释高级概念例如扩展主机，支持远程开发和GitHub代码空间，以及建议的API。
+- 参考部分：包含了VS Code API、贡献点和许多其他主题的详尽参考。
+
+## 新鲜事
+
+
+VS Code每月更新一次，这也适用于扩展API。每个月都有新的特性和api可用，这增加了VS Code扩展的功能和使用范围。
+
+要跟上扩展API的最新动态，你可以回顾每月的发布说明，其中有专门的部分涵盖:
+
+[Extension authoring](https://code.visualstudio.com/updates#_extension-authoring)——了解最新版本中有哪些新的扩展api可用。
+
+[Proposed extension APIs](https://code.visualstudio.com/updates#_proposed-extension-apis)——审查并为即将到来的建议api提供反馈。
+
+
+## 寻求帮助
+
+如果你对扩展开发有疑问，试着在以下渠道提问：
+
+* [Stack Overflow](https://stackoverflow.com/questions/tagged/visual-studio-code): There are[thousands of questions](https://stackoverflow.com/questions/tagged/visual-studio-code) tagged`visual-studio-code`,
+  and over half of them already have answers. Search for your issue, ask
+  questions, or help your fellow developers by answering VS Code extension
+  development questions!
+* [Gitter Channel](https://gitter.im/Microsoft/vscode) and[VS Code Dev Slack](https://aka.ms/vscode-dev-community): Public chatroom for extension developers. Some VS Code team members chime in conversations.
+
+要对文档提供反馈，可以在[Microsoft/vscode-docs](https://github.com/microsoft/vscode-docs/issues) 中创建新问题。如果您有针对扩展的问题无法找到答案，或者 VS Code 扩展API有问题，请在[Microsoft/vscode](https://github.com/microsoft/vscode/issues)](https://link.zhihu.com/?target=https%3A//github.com/microsoft/vscode/issues) 建立一个新的问题。
