--- a/文档翻译/API/4扩展指南/概述.md
+++ b/文档翻译/API/4扩展指南/概述.md
@@ -26,19 +26,19 @@
 
 | Guide on VS Code Website | API & Contribution |
 | - | - |
-| [Command](https://code.visualstudio.com/api/extension-guides/command) | [commands](https://code.visualstudio.com/api/references/vscode-api#commands) |
-| [Color Theme](https://code.visualstudio.com/api/extension-guides/color-theme) | [contributes.themes](https://code.visualstudio.com/api/references/contribution-points#contributes.themes) |
-| [File Icon Theme](https://code.visualstudio.com/api/extension-guides/file-icon-theme) | [contributes.iconThemes](https://code.visualstudio.com/api/references/contribution-points#contributes.iconThemes) |
-| [Product Icon Theme](https://code.visualstudio.com/api/extension-guides/product-icon-theme) | [contributes.productIconThemes](https://code.visualstudio.com/api/references/contribution-points#contributes.productIconThemes) |
-| [Tree View](https://code.visualstudio.com/api/extension-guides/tree-view) | [window.createTreeView](https://code.visualstudio.com/api/references/vscode-api#window.createTreeView)<br/>[window.registerTreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#window.registerTreeDataProvider)<br/>[TreeView](https://code.visualstudio.com/api/references/vscode-api#TreeView)<br/>[TreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#TreeDataProvider)<br/>[contributes.views](https://code.visualstudio.com/api/references/contribution-points#contributes.views)<br/>[contributes.viewsContainers](https://code.visualstudio.com/api/references/contribution-points#contributes.viewsContainers) |
-| [Webview](https://code.visualstudio.com/api/extension-guides/webview) | [window.createWebviewPanel](https://code.visualstudio.com/api/references/vscode-api#window.createWebviewPanel)<br/>[window.registerWebviewPanelSerializer](https://code.visualstudio.com/api/references/vscode-api#window.registerWebviewPanelSerializer) |
-| [Custom Editors](https://code.visualstudio.com/api/extension-guides/custom-editors) | [window.registerCustomEditorProvider](https://code.visualstudio.com/api/references/vscode-api#window.registerCustomEditorProvider)<br/>[CustomTextEditorProvider](https://code.visualstudio.com/api/references/vscode-api#CustomTextEditorProvider)<br/>[contributes.customEditors](https://code.visualstudio.com/api/references/contribution-points#contributes.customEditors) |
-| [Virtual Documents](https://code.visualstudio.com/api/extension-guides/virtual-documents) | [workspace.registerTextDocumentContentProvider](https://code.visualstudio.com/api/references/vscode-api#workspace.registerTextDocumentContentProvider)<br/>[commands.registerCommand](https://code.visualstudio.com/api/references/vscode-api#commands.registerCommand)<br/>[window.showInputBox](https://code.visualstudio.com/api/references/vscode-api#window.showInputBox) |
+| [指令](https://code.visualstudio.com/api/extension-guides/command) | [commands](https://code.visualstudio.com/api/references/vscode-api#commands) |
+| [颜色主题](https://code.visualstudio.com/api/extension-guides/color-theme) | [contributes.themes](https://code.visualstudio.com/api/references/contribution-points#contributes.themes) |
+| [文件图标主题](https://code.visualstudio.com/api/extension-guides/file-icon-theme) | [contributes.iconThemes](https://code.visualstudio.com/api/references/contribution-points#contributes.iconThemes) |
+| [产品图标主题](https://code.visualstudio.com/api/extension-guides/product-icon-theme) | [contributes.productIconThemes](https://code.visualstudio.com/api/references/contribution-points#contributes.productIconThemes) |
+| [树视图(https://code.visualstudio.com/api/extension-guides/tree-view) | [window.createTreeView](https://code.visualstudio.com/api/references/vscode-api#window.createTreeView)<br/>[window.registerTreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#window.registerTreeDataProvider)<br/>[TreeView](https://code.visualstudio.com/api/references/vscode-api#TreeView)<br/>[TreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#TreeDataProvider)<br/>[contributes.views](https://code.visualstudio.com/api/references/contribution-points#contributes.views)<br/>[contributes.viewsContainers](https://code.visualstudio.com/api/references/contribution-points#contributes.viewsContainers) |
+| [Web视图](https://code.visualstudio.com/api/extension-guides/webview) | [window.createWebviewPanel](https://code.visualstudio.com/api/references/vscode-api#window.createWebviewPanel)<br/>[window.registerWebviewPanelSerializer](https://code.visualstudio.com/api/references/vscode-api#window.registerWebviewPanelSerializer) |
+| [自定义编辑器](https://code.visualstudio.com/api/extension-guides/custom-editors) | [window.registerCustomEditorProvider](https://code.visualstudio.com/api/references/vscode-api#window.registerCustomEditorProvider)<br/>[CustomTextEditorProvider](https://code.visualstudio.com/api/references/vscode-api#CustomTextEditorProvider)<br/>[contributes.customEditors](https://code.visualstudio.com/api/references/contribution-points#contributes.customEditors) |
+| [虚拟文件](https://code.visualstudio.com/api/extension-guides/virtual-documents) | [workspace.registerTextDocumentContentProvider](https://code.visualstudio.com/api/references/vscode-api#workspace.registerTextDocumentContentProvider)<br/>[commands.registerCommand](https://code.visualstudio.com/api/references/vscode-api#commands.registerCommand)<br/>[window.showInputBox](https://code.visualstudio.com/api/references/vscode-api#window.showInputBox) |
 | [Task Provider](https://code.visualstudio.com/api/extension-guides/task-provider) | [tasks.registerTaskProvider](https://code.visualstudio.com/api/references/vscode-api#tasks.registerTaskProvider)<br/>[Task](https://code.visualstudio.com/api/references/vscode-api#Task)<br/>[ShellExecution](https://code.visualstudio.com/api/references/vscode-api#ShellExecution)<br/>[contributes.taskDefinitions](https://code.visualstudio.com/api/references/contribution-points#contributes.taskDefinitions) |
-| [Source Control](https://code.visualstudio.com/api/extension-guides/scm-provider) | [workspace.workspaceFolders](https://code.visualstudio.com/api/references/vscode-api#workspace.workspaceFolders)<br/>[SourceControl](https://code.visualstudio.com/api/references/vscode-api#SourceControl)<br/>[SourceControlResourceGroup](https://code.visualstudio.com/api/references/vscode-api#SourceControlResourceGroup)<br/>[scm.createSourceControl](https://code.visualstudio.com/api/references/vscode-api#scm.createSourceControl)<br/>[TextDocumentContentProvider](https://code.visualstudio.com/api/references/vscode-api#TextDocumentContentProvider)<br/>[contributes.menus](https://code.visualstudio.com/api/references/contribution-points#contributes.menus) |
-| [Debugger Extension](https://code.visualstudio.com/api/extension-guides/debugger-extension) | [contributes.breakpoints](https://code.visualstudio.com/api/references/contribution-points#contributes.breakpoints)<br/>[contributes.debuggers](https://code.visualstudio.com/api/references/contribution-points#contributes.debuggers)<br/>[debug](https://code.visualstudio.com/api/references/vscode-api#debug) |
-| [Markdown Extension](https://code.visualstudio.com/api/extension-guides/markdown-extension) | markdown.previewStyles<br/>markdown.markdownItPlugins<br/>markdown.previewScripts |
-| [Custom Data Extension](https://code.visualstudio.com/api/extension-guides/custom-data-extension) | contributes.html.customData<br/>contributes.css.customData |
+| [资源管理](https://code.visualstudio.com/api/extension-guides/scm-provider) | [workspace.workspaceFolders](https://code.visualstudio.com/api/references/vscode-api#workspace.workspaceFolders)<br/>[SourceControl](https://code.visualstudio.com/api/references/vscode-api#SourceControl)<br/>[SourceControlResourceGroup](https://code.visualstudio.com/api/references/vscode-api#SourceControlResourceGroup)<br/>[scm.createSourceControl](https://code.visualstudio.com/api/references/vscode-api#scm.createSourceControl)<br/>[TextDocumentContentProvider](https://code.visualstudio.com/api/references/vscode-api#TextDocumentContentProvider)<br/>[contributes.menus](https://code.visualstudio.com/api/references/contribution-points#contributes.menus) |
+| [调试扩展](https://code.visualstudio.com/api/extension-guides/debugger-extension) | [contributes.breakpoints](https://code.visualstudio.com/api/references/contribution-points#contributes.breakpoints)<br/>[contributes.debuggers](https://code.visualstudio.com/api/references/contribution-points#contributes.debuggers)<br/>[debug](https://code.visualstudio.com/api/references/vscode-api#debug) |
+| [Markdown 扩展](https://code.visualstudio.com/api/extension-guides/markdown-extension) | markdown.previewStyles<br/>markdown.markdownItPlugins<br/>markdown.previewScripts |
+| [自定义数据扩展](https://code.visualstudio.com/api/extension-guides/custom-data-extension) | contributes.html.customData<br/>contributes.css.customData |
 
 以下是来自[VS Code Extensions samples repo](https://github.com/microsoft/vscode-extension-samples)的附加示例列表。
 
@@ -46,15 +46,15 @@
 
 | Sample on GitHub Repo | API & Contribution |
 | - | - |
-| [Webview Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/webview-sample) | [window.createWebviewPanel](https://code.visualstudio.com/api/references/vscode-api#window.createWebviewPanel)<br/>[window.registerWebviewPanelSerializer](https://code.visualstudio.com/api/references/vscode-api#window.registerWebviewPanelSerializer) |
-| [Status Bar Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/statusbar-sample) | [window.createStatusBarItem](https://code.visualstudio.com/api/references/vscode-api#window.createStatusBarItem)<br/>[StatusBarItem](https://code.visualstudio.com/api/references/vscode-api#StatusBarItem) |
-| [Tree View Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/tree-view-sample) | [window.createTreeView](https://code.visualstudio.com/api/references/vscode-api#window.createTreeView)<br/>[window.registerTreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#window.registerTreeDataProvider)<br/>[TreeView](https://code.visualstudio.com/api/references/vscode-api#TreeView)<br/>[TreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#TreeDataProvider)<br/>[contributes.views](https://code.visualstudio.com/api/references/contribution-points#contributes.views)<br/>[contributes.viewsContainers](https://code.visualstudio.com/api/references/contribution-points#contributes.viewsContainers) |
-| [Task Provider Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/task-provider-sample) | [tasks.registerTaskProvider](https://code.visualstudio.com/api/references/vscode-api#tasks.registerTaskProvider)<br/>[Task](https://code.visualstudio.com/api/references/vscode-api#Task)<br/>[ShellExecution](https://code.visualstudio.com/api/references/vscode-api#ShellExecution)<br/>[contributes.taskDefinitions](https://code.visualstudio.com/api/references/contribution-points#contributes.taskDefinitions) |
-| [Multi Root Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/basic-multi-root-sample) | [workspace.getWorkspaceFolder](https://code.visualstudio.com/api/references/vscode-api#workspace.getWorkspaceFolder)<br/>[workspace.onDidChangeWorkspaceFolders](https://code.visualstudio.com/api/references/vscode-api#workspace.onDidChangeWorkspaceFolders) |
+| [Web视图示例](https://github.com/microsoft/vscode-extension-samples/tree/master/webview-sample) | [window.createWebviewPanel](https://code.visualstudio.com/api/references/vscode-api#window.createWebviewPanel)<br/>[window.registerWebviewPanelSerializer](https://code.visualstudio.com/api/references/vscode-api#window.registerWebviewPanelSerializer) |
+| [状态栏示例](https://github.com/microsoft/vscode-extension-samples/tree/master/statusbar-sample) | [window.createStatusBarItem](https://code.visualstudio.com/api/references/vscode-api#window.createStatusBarItem)<br/>[StatusBarItem](https://code.visualstudio.com/api/references/vscode-api#StatusBarItem) |
+| [Tree视图示例](https://github.com/microsoft/vscode-extension-samples/tree/master/tree-view-sample) | [window.createTreeView](https://code.visualstudio.com/api/references/vscode-api#window.createTreeView)<br/>[window.registerTreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#window.registerTreeDataProvider)<br/>[TreeView](https://code.visualstudio.com/api/references/vscode-api#TreeView)<br/>[TreeDataProvider](https://code.visualstudio.com/api/references/vscode-api#TreeDataProvider)<br/>[contributes.views](https://code.visualstudio.com/api/references/contribution-points#contributes.views)<br/>[contributes.viewsContainers](https://code.visualstudio.com/api/references/contribution-points#contributes.viewsContainers) |
+| [Task Provider 示例](https://github.com/microsoft/vscode-extension-samples/tree/master/task-provider-sample) | [tasks.registerTaskProvider](https://code.visualstudio.com/api/references/vscode-api#tasks.registerTaskProvider)<br/>[Task](https://code.visualstudio.com/api/references/vscode-api#Task)<br/>[ShellExecution](https://code.visualstudio.com/api/references/vscode-api#ShellExecution)<br/>[contributes.taskDefinitions](https://code.visualstudio.com/api/references/contribution-points#contributes.taskDefinitions) |
+| [多文件夹示例](https://github.com/microsoft/vscode-extension-samples/tree/master/basic-multi-root-sample) | [workspace.getWorkspaceFolder](https://code.visualstudio.com/api/references/vscode-api#workspace.getWorkspaceFolder)<br/>[workspace.onDidChangeWorkspaceFolders](https://code.visualstudio.com/api/references/vscode-api#workspace.onDidChangeWorkspaceFolders) |
 | [Completion Provider Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/completions-sample) | [languages.registerCompletionItemProvider](https://code.visualstudio.com/api/references/vscode-api#languages.registerCompletionItemProvider)<br/>[CompletionItem](https://code.visualstudio.com/api/references/vscode-api#CompletionItem)<br/>[SnippetString](https://code.visualstudio.com/api/references/vscode-api#SnippetString) |
 | [File System Provider Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/fsprovider-sample) | [workspace.registerFileSystemProvider](https://code.visualstudio.com/api/references/vscode-api#workspace.registerFileSystemProvider) |
 | [Editor Decoractor Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/decorator-sample) | [TextEditor.setDecorations](https://code.visualstudio.com/api/references/vscode-api#TextEditor.setDecorations)<br/>[DecorationOptions](https://code.visualstudio.com/api/references/vscode-api#DecorationOptions)<br/>[DecorationInstanceRenderOptions](https://code.visualstudio.com/api/references/vscode-api#DecorationInstanceRenderOptions)<br/>[ThemableDecorationInstanceRenderOptions](https://code.visualstudio.com/api/references/vscode-api#ThemableDecorationInstanceRenderOptions)<br/>[window.createTextEditorDecorationType](https://code.visualstudio.com/api/references/vscode-api#window.createTextEditorDecorationType)<br/>[TextEditorDecorationType](https://code.visualstudio.com/api/references/vscode-api#TextEditorDecorationType)<br/>[contributes.colors](https://code.visualstudio.com/api/references/contribution-points#contributes.colors) |
-| [I18n Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/i18n-sample) |   |
+| [I18n 示例](https://github.com/microsoft/vscode-extension-samples/tree/master/i18n-sample) |   |
 | [Terminal Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/terminal-sample) | [window.createTerminal](https://code.visualstudio.com/api/references/vscode-api#window.createTerminal)<br/>[window.onDidChangeActiveTerminal](https://code.visualstudio.com/api/references/vscode-api#window.onDidChangeActiveTerminal)<br/>[window.onDidCloseTerminal](https://code.visualstudio.com/api/references/vscode-api#window.onDidCloseTerminal)<br/>[window.onDidOpenTerminal](https://code.visualstudio.com/api/references/vscode-api#window.onDidOpenTerminal)<br/>[window.Terminal](https://code.visualstudio.com/api/references/vscode-api#window.Terminal)<br/>[window.terminals](https://code.visualstudio.com/api/references/vscode-api#window.terminals) |
 | [Vim Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/vim-sample) | [commands](https://code.visualstudio.com/api/references/vscode-api#commands)<br/>[StatusBarItem](https://code.visualstudio.com/api/references/vscode-api#StatusBarItem)<br/>[window.createStatusBarItem](https://code.visualstudio.com/api/references/vscode-api#window.createStatusBarItem)<br/>[TextEditorCursorStyle](https://code.visualstudio.com/api/references/vscode-api#TextEditorCursorStyle)<br/>[window.activeTextEditor](https://code.visualstudio.com/api/references/vscode-api#window.activeTextEditor)<br/>[Position](https://code.visualstudio.com/api/references/vscode-api#Position)<br/>[Range](https://code.visualstudio.com/api/references/vscode-api#Range)<br/>[Selection](https://code.visualstudio.com/api/references/vscode-api#Selection)<br/>[TextEditor](https://code.visualstudio.com/api/references/vscode-api#TextEditor)<br/>[TextEditorRevealType](https://code.visualstudio.com/api/references/vscode-api#TextEditorRevealType)<br/>[TextDocument](https://code.visualstudio.com/api/references/vscode-api#TextDocument) |
 | [Source Control Sample](https://github.com/microsoft/vscode-extension-samples/tree/master/source-control-sample) | [workspace.workspaceFolders](https://code.visualstudio.com/api/references/vscode-api#workspace.workspaceFolders)<br/>[SourceControl](https://code.visualstudio.com/api/references/vscode-api#SourceControl)<br/>[SourceControlResourceGroup](https://code.visualstudio.com/api/references/vscode-api#SourceControlResourceGroup)<br/>[scm.createSourceControl](https://code.visualstudio.com/api/references/vscode-api#scm.createSourceControl)<br/>[TextDocumentContentProvider](https://code.visualstudio.com/api/references/vscode-api#TextDocumentContentProvider)<br/>[contributes.menus](https://code.visualstudio.com/api/references/contribution-points#contributes.menus) |
