修改了一些小错误

--- a/文档翻译/API/4扩展指南/4.6树视图.md
+++ b/文档翻译/API/4扩展指南/4.6树视图.md
@@ -477,4 +477,4 @@ vscode.window.createTreeView('ftpExplorer', {
 });
 ```
 
-实现请参考`tree-view-sample`中的[ftpExplorer.ts](https://github.com/microsoft/vscode-extension-samples/tree/master/tree-view-sample/src/ftpExplorer.ts)(https://github.com/microsoft/vscode-extension-samples/tree/master/tree-view-sample/src/nodeDependencies.ts)。
+实现请参考`tree-view-sample`中的[ftpExplorer.ts](https://github.com/microsoft/vscode-extension-samples/tree/master/tree-view-sample/src/ftpExplorer.ts)
