修改了一些错误

--- a/文档翻译/API/4扩展指南/4.4文件图标主题.md
+++ b/文档翻译/API/4扩展指南/4.4文件图标主题.md
@@ -149,6 +149,6 @@
   }
 }
 ```
-### 文件夹图标在文件图标主题#
+### 文件图标主题中的文件夹图标
 当文件夹图标足以指示文件夹的展开状态,文件图标主题可以指示文件资源管理器不要显示默认的文件夹图标(旋转三角形或“扭曲”)。该模式通过在文件图标主题定义文件中设置`"hidesExplorerArrows":true`启用。
 
